--- a/Python_EDA_Assignment.ipynb
+++ b/Python_EDA_Assignment.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "########INSTRUCTIONS########
+    "########INSTRUCTIONS########\n",
     "#Your task is to \n",
     "#(1) run the following two lines (In Line 2 and Line 3)\n",
     "#(2) One line at at time, copy and paste from the EDA cheat sheet, starting Line 4 \n",
