--- a/Python_EDA_Assignment.ipynb
+++ b/Python_EDA_Assignment.ipynb
@@ -9,10 +9,11 @@
    "source": [
     "########INSTRUCTIONS########\n",
     "#Your task is to \n",
-    "#(1) run the following two lines (In Line 2 and Line 3)\n",
-    "#(2) One line at at time, copy and paste from the EDA cheat sheet, starting Line 4 \n",
-    "#IMPORTANT! since we are dealing with Ad clicking dataset (it's been uploaded as \"Ad\"), where says tips must be replaced with Ad\n",
-    "# HINT: Ad.head(10) should be your Line 4\n",
+    "#(1) first, copy the command line in ("In [2]") and run. Next, copy  the command in ("In [3]"), and then "In [4]")\n",
+    "#(2) starting from command in ("In [4]") of the EDA cheet sheet (https://github.com/chiharuishida/Tutorialdata/blob/main/EDA_cheat_sheet.ipynb)\n",
+    "#one command at at time, copy and paste into your worksheet\n",
+
+    "#IMPORTANT! since we are dealing with Ad clicking dataset (it's been uploaded as \"Ad\"), where says "tips" in the cheeet sheet must be replaced with "Ad"\n",
     "#(3) starting In Line 6, you will also need to pay attention to variable name changes.\n",
     "#Variables in this Ad dataset are:\n",
     "#   Time Spent on Site in Seconds ('Site_Time')\n",
