--- a/Python_EDA_Assignment.ipynb
+++ b/Python_EDA_Assignment.ipynb
@@ -12,7 +12,7 @@
     "#(1) first, copy the command line in ("In [2]") and run. Next, copy  the command in ("In [3]"), and then ("In [4]")\n",
     "#(2) starting from command in ("In [4]") of the EDA cheet sheet (https://github.com/chiharuishida/Tutorialdata/blob/main/EDA_cheat_sheet.ipynb)\n",
     "#one command at at time, copy and paste into your worksheet\n",
-    "#IMPORTANT! since we are dealing with Ad clicking dataset (it's been uploaded as \"Ad\"), where says "tips" in the cheeet sheet must be replaced with "Ad"\n",
+    "#IMPORTANT! since we are dealing with Ad clicking dataset (it's been uploaded as \"Ad\"), where the word tips appear it must be replaced with the word Ad\n",
     "#(3) starting in "In [6]", you will also need to pay attention to variable name changes for the Ad dataset.\n",
     "#Variables in this Ad dataset are:\n",
     "#   Time Spent on Site in Seconds ('Site_Time')\n",
