--- a/Python_EDA_Assignment.ipynb
+++ b/Python_EDA_Assignment.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3be07382",
+   "execution_count": 1,
+   "id": "d3b1a91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17ee8f39",
+   "execution_count": 2,
+   "id": "0e4123d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7cd88c1e",
+   "execution_count": 3,
+   "id": "2d445152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2680a74",
+   "execution_count": 4,
+   "id": "d11cdfd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Site_Time</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>DailyTime</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>AdClicking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>68.95</td>\n",
+       "      <td>35</td>\n",
+       "      <td>256.09</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>80.23</td>\n",
+       "      <td>31</td>\n",
+       "      <td>193.77</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>69.47</td>\n",
+       "      <td>26</td>\n",
+       "      <td>236.50</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74.15</td>\n",
+       "      <td>29</td>\n",
+       "      <td>245.89</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68.37</td>\n",
+       "      <td>35</td>\n",
+       "      <td>225.58</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>59.99</td>\n",
+       "      <td>23</td>\n",
+       "      <td>226.74</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>88.91</td>\n",
+       "      <td>33</td>\n",
+       "      <td>208.36</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>66.00</td>\n",
+       "      <td>48</td>\n",
+       "      <td>131.76</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>74.53</td>\n",
+       "      <td>30</td>\n",
+       "      <td>221.51</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>69.88</td>\n",
+       "      <td>20</td>\n",
+       "      <td>183.82</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Site_Time  Age  DailyTime  Gender AdClicking\n",
+       "0      68.95   35     256.09  Female         No\n",
+       "1      80.23   31     193.77    Male         No\n",
+       "2      69.47   26     236.50  Female         No\n",
+       "3      74.15   29     245.89    Male         No\n",
+       "4      68.37   35     225.58  Female         No\n",
+       "5      59.99   23     226.74    Male         No\n",
+       "6      88.91   33     208.36  Female         No\n",
+       "7      66.00   48     131.76    Male        Yes\n",
+       "8      74.53   30     221.51    Male         No\n",
+       "9      69.88   20     183.82    Male         No"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Ad.head(10)\n",
     "#so this is where the assignment begins. Go to https://github.com/chiharuishida/Tutorialdata/blob/main/EDA_cheat_sheet.ipynb \n",
     "# for the rest of the code. Where says \"Tips\" you will need to replace with \"Ad\" because that's our new dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2adb1681",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
