--- a/EDA_cheat_sheet.ipynb
+++ b/EDA_cheat_sheet.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPcQY6uZagxdBA/Tn3RDHH1"
     },
     "kernelspec": {
       "name": "python3",
