--- a/EDA_cheat_sheet.ipynb
+++ b/EDA_cheat_sheet.ipynb
@@ -43,14 +43,18 @@
         "\n",
         "####option2 - from a manual upload\n",
         "\n",
-        "#Run the following two lines:\n",
+        "*Run the following two lines:*\n",
+        "\n",
         "from google.colab import files\n",
+        "\n",
         "uploaded = files.upload()\n",
         "\n",
-        "#in the next block of code run the followings:\n",
+        "*in the next block of code run the followings:*\n",
         "\n",
         "import pandas as pd\n",
+        "\n",
         "import io\n",
+        "\n",
         "DFname=pd.read_csv(io.BytesIO(uploaded['YOURcsvFILEname.csv']))"
       ]
     },
@@ -122,7 +126,7 @@
       },
       "outputs": [],
       "source": [
-        "sns.heatmap(tips.corr(), annot=True)\n",
+        "sns.heatmap(tips.corr(numeric_only = True), annot=True)\n",
         "#annot=True adds an annotation to the right"
       ]
     },
