--- a/EDA_cheat_sheet.ipynb
+++ b/EDA_cheat_sheet.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chiharuishida/Tutorialdata/blob/main/EDA_cheat_sheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -24,38 +34,17 @@
         "#uploading a sample dataset that comes with Seaborn as our dataframe for this session\n",
         "#if you are using your own dataset (not the tips dataset), then refer to the instructions below\n",
         "#By the way, the line that begins with the number sign (#) is a memo, not an actual command\n",
-        "#Here, tips is the dataframe name we are giving"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qJ62vR8R7xAc"
-      },
-      "source": [
-        "###if you are using your own dataset (not the tips dataset), then import it here. Two ways:\n",
+        "#Here, tips is the dataframe name we are giving\n",
         "\n",
-        "####option1 - from URL\n",
-        "\n",
-        "import pandas as pd\n",
-        "url = \"URLofYOURcsvfileLOCATION\"\n",
-        "DFname = pd.read_csv(url)\n",
-        "\n",
-        "####option2 - from a manual upload\n",
-        "\n",
-        "*Run the following two lines:*\n",
-        "\n",
-        "from google.colab import files\n",
-        "\n",
-        "uploaded = files.upload()\n",
-        "\n",
-        "*in the next block of code run the followings:*\n",
-        "\n",
-        "import pandas as pd\n",
-        "\n",
-        "import io\n",
-        "\n",
-        "DFname=pd.read_csv(io.BytesIO(uploaded['YOURcsvFILEname.csv']))"
+        "#if you are using your own dataset, there are two options\n",
+        "#Option 1: From URL\n",
+        "   #import pandas as pd\n",
+        "   #url = \"URLofYOURcsvfileLOCATION\" DFname = pd.read_csv(url)\n",
+        "#option 2: manual upload\n",
+        "   #from google.colab import files\n",
+        "   #uploaded = files.upload()\n",
+        "   #import io\n",
+        "   #DFname=pd.read_csv(io.BytesIO(uploaded['YOURcsvFILEname.csv']))"
       ]
     },
     {
@@ -126,7 +115,7 @@
       },
       "outputs": [],
       "source": [
-        "sns.heatmap(tips.corr(numeric_only = True), annot=True)\n",
+        "sns.heatmap(tips.corr(numeric_only=true), annot=True)\n",
         "#annot=True adds an annotation to the right"
       ]
     },
@@ -138,7 +127,7 @@
       },
       "outputs": [],
       "source": [
-        "sns.heatmap(tips.corr(), cmap=\"YlGnBu\")\n",
+        "sns.heatmap(tips.corr(numeric_only=true), cmap=\"YlGnBu\")\n",
         "#just changing colors here for better looks (darker=greater value)\n",
         "#other colormap options are 'Greys', 'Purples', 'Blues', 'Greens', 'Oranges', 'Reds','YlOrBr', 'YlOrRd', 'OrRd', 'PuRd', 'RdPu', 'BuPu','GnBu', 'PuBu', 'YlGnBu', 'PuBuGn', 'BuGn', 'YlGn'"
       ]
@@ -237,7 +226,7 @@
       "outputs": [],
       "source": [
         "tips_day=tips.groupby(\"day\")\n",
-        "tips_day.mean()\n",
+        "tips_day.mean(\"tip\")\n",
         "#groupby() is used to split the data in dataframe into groups (\"tips_day\" is created as a new dataframe)\n",
         "#\"day\" is a categorical variable"
       ]
@@ -282,7 +271,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
