--- a/EDA_cheat_sheet.ipynb
+++ b/EDA_cheat_sheet.ipynb
@@ -115,7 +115,7 @@
       },
       "outputs": [],
       "source": [
-        "sns.heatmap(tips.corr(numeric_only=true), annot=True)\n",
+        "sns.heatmap(tips.corr(numeric_only=True), annot=True)\n",
         "#annot=True adds an annotation to the right"
       ]
     },
